--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,16 +7,12 @@
 			<h1><a href="">Gwilym's Django experiment</a></h1>
 		</div>
 
-		<div>
-			<p>Published: 10.06.2015</p>
-			<h2><a href="">First section</a></h2>
-			<p>Some content goes here...</p>
-		</div>
-
-		<div>
-			<p>Published: 10.06.2015</p>
-			<h2><a href="">Second section</a></h2>
-			<p>Some more content goes here...</p>
-		</div>
+		{% for post in posts %}
+			<div>
+				<p>Published: {{post.published_date}}</p>
+				<h1><a href="">{{post.title}}</a></h1>
+				<p>{{post.text|linebreaks}}</p>
+			</div>
+		{% endfor %}
 	</body>
 </html>
